# sog-loader

./: .gitignore  Cargo.toml  README.md  biome.json  lerna.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: lint_format.yml  on_push.yml  rust_lint_format.yml
crates/playground/: Cargo.toml
crates/playground/src/: main.rs
crates/sample_data/: pizza_.csv  sushi.sog
crates/sample_data/pizza/: meta.json
crates/sog-decoder/: Cargo.toml
crates/sog-decoder-wasm/: Cargo.toml  build.rs
crates/sog-decoder-wasm/src/: info.rs  lib.rs  types.rs
crates/sog-decoder/src/: decode.rs  decode_image.rs  error.rs  lib.rs  metajson.rs  types.rs
rust/: Cargo.toml
rust/playground/: Cargo.toml
rust/playground/src/: main.rs
rust/sog-decoder/: Cargo.toml
rust/sog-decoder/src/: lib.rs
scripts/: wasm_clear.js  wasm_clear.mjs
